# commit-issue-prefix

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
add_github_issue_prefix/: __init__.py  main.py
commit_issue_prefix/: __init__.py  main.py
tests/: test_main.py
