[project]
name = "commit-issue-prefix"
version = "v1.1.0"
description = "Automatically add issue number prefix to commit messages based on branch name. Supports GitHub, JIRA, GitLab, and any custom pattern."
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "kimsoungryoul", email = "kimsoungryoul@gmail.com" }
]
requires-python = ">=3.9"
keywords = ["git", "pre-commit", "issue", "commit-message", "jira", "github"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.8.0",
]

[project.scripts]
commit-issue-prefix = "commit_issue_prefix.main:main"

[project.urls]
Homepage = "https://github.com/KimSoungRyoul/commit-issue-prefix"
Repository = "https://github.com/KimSoungRyoul/commit-issue-prefix"
Issues = "https://github.com/KimSoungRyoul/commit-issue-prefix/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["commit_issue_prefix"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
]

[tool.pytest.ini_options]
testpaths = ["tests"]
